Fixed contrast levels of disabled cards

--- a/src/components/card/_card.scss
+++ b/src/components/card/_card.scss
@@ -29,7 +29,7 @@
     .euiCard__title,
     .euiCard__description,
     .euiCard__top {
-      color: $euiButtonColorDisabled;
+      color: $euiColorDarkShade;
     }
 
     .euiCard__top svg,
